# antfarm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  UPGRADE.md  pyproject.toml  releases.md  work_report.md
.github/workflows/: ci.yml
antfarm/: __main__.py
antfarm/core/: __init__.py  activity.py  actuator.py  audit.py  auth.py  auto_merge.py  autoscaler.py  cli.py  colony_client.py  deploy.py  doctor.py  failover.py  hook_setup.py  inbox.py  lifecycle.py  memory.py  (+23 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOGFOOD_PROGRESS.md  IMPLEMENTATION.md  IMPLEMENTATION_v06.md  IMPLEMENTATION_v061.md  IMPLEMENTATION_v062.md  INITIAL_ISSUES.md  OPERATOR_GUIDE.md  SPEC.md  SPEC_v05.md  SPEC_v06.md  SPEC_v06_plugin.md  v05_roadmap.md  workflow_v0.5.8.md
scripts/: smoke_v059.sh
tests/: conftest.py  test_activity.py  test_actuator.py  test_audit.py  test_auth.py  test_auto_merge.py  test_autoscaler.py  test_cli.py  test_colony_id.py  test_deploy.py  test_doctor.py  test_e2e.py  test_e2e_mission.py  test_e2e_multi_node.py  test_failover.py  test_file_backend.py  test_github_backend.py  test_hook_setup.py  test_human_overrides.py  test_import.py  test_inbox.py  test_lifecycle.py  test_logging_setup.py  test_memory.py  test_mission_backend.py  test_mission_cli.py  test_mission_context.py  test_mission_doc.py  test_mission_serve.py  test_mission_usage.py  test_missions_model.py  test_models.py  test_multi_node_autoscaler.py  test_placement.py  test_planner.py  test_planner_worker_e2e.py  test_pr_ops.py  test_pricing.py  test_process_manager.py  test_queen.py  (+18 more)
(+44 files in other folders)
