[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antfarm"
version = "0.6.2"
description = "Lightweight orchestration layer for distributing coding work across multiple AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]

[project.scripts]
antfarm = "antfarm.core.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
